apps/eyesclosed/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eyesclosed
spec:
  selector:
    app: eyesclosed
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
